# ITS-ROUTING

./: .gitignore  Cargo.toml  Dockerfile  ITS-net_FORMAL_VERIFICATION.md  ITS-net_HEADS_UP.md  ITS-net_PIPE.md  ITS-net_SECURITY_LAYERS.md  ITS-net_manual.md  ITS-net_mathematics.md  ITS-net_troubleshooting.md  ITS-net_usecase.md  ITS-net_vision.md  ITS-routing_CENSORSHIP_RECOVERY.md  ITS-routing_DEPLOY_MATH_GATES.md  ITS-routing_DOMINANCE_PLAN.md  ITS-routing_FORMAL_VERIFICATION.md  ITS-routing_HEADS_UP.md  ITS-routing_KEEP_BOUNDARY.md  ITS-routing_MATHEMATICAL_CORE.md  ITS-routing_OVERLAY_COMPARISON.md  ITS-routing_OVERLAY_EXTINCTION.md  ITS-routing_PARTICIPATION_SYMMETRY.md  ITS-routing_PIPE.md  ITS-routing_PREBUILD_DOCTRINE.md  ITS-routing_SECURITY_LAYERS.md  ITS-routing_SOCKS_EGRESS.md  ITS-routing_STANDARD_REPLACEMENT.md  ITS-routing_SUPERIORITY.md  ITS-routing_SecureEndpointDoctrine.md  ITS-routing_UNATTACKABLE_MODEL.md  ITS-routing_manual.md  ITS-routing_mathematics.md  ITS-routing_troubleshooting.md  ITS-routing_usecase.md  ITS-routing_vision.md  ITS_ADVANCED_RIDGES.md  ITS_CONSTITUTION_CLI.md  ITS_ECOSYSTEM.md  ITS_ECOSYSTEM_AUDIT.md  ITS_HIDDEN_SERVICE.md  (+20 more)
completions/: hydra-its.bash  hydra-its.fish  hydra-its.zsh  its-net.bash  its-net.fish  its-net.zsh  its-routing.bash  its-routing.fish  its-routing.ps1  its-routing.zsh
core_logic/: Cargo.toml
core_logic/src/: anomality.rs  field_arith.rs  hydra_sss.rs  lib.rs  lorenz.rs  masking.rs  morphic_proof.rs  otm.rs  poly.rs  ratchet.rs  routing.rs  sel4_compat.rs  stealth_identity.rs  time_lock.rs  trapdoor.rs  tunnel.rs
core_logic/tests/: hydra_network_simulation.rs  lorenz_timing_simulation.rs  morphic_proof_simulation.rs  stealth_identity_simulation.rs  tunnel.rs
deploy/: COMMUNITY_MIRRORS.md
deploy/docker/: Dockerfile.its-km-compose  docker-compose.bob-stack.yml  docker-compose.yml  docker_build_all.sh
deploy/docker/bob-site/: index.html
deploy/firecracker/: README.md
deploy/hidden-service/: README.md
deploy/hidden-service/static/: index.html
deploy/pool-mirror/: README.md  pool_mirror_evil_server.py  pool_mirror_server.py
docs/: ITS_DOMINANCE_PITCH.md  ITS_WIRE_PROFILE_DRAFT_v0.1.md  ITS_WIRE_PROFILE_DRAFT_v0.2.md
docs/archive/: ITS-routing_PREBUILD_DOCTRINE.md
docs/archive/dev-onion/: ITS-routing_mathematics.md
docs/archive/marketing/: ITS_DOMINANCE_PITCH.md
hal_abstraction/: Cargo.toml
hal_abstraction/src/: lib.rs
hydra_cli/: Cargo.toml
hydra_cli/src/: anomality.rs  anomaly_detection.rs  main.rs
its_net_cli/: Cargo.toml
its_net_cli/src/: main.rs  stdio.rs
its_pool_proxy/: Cargo.toml
its_pool_proxy/src/: main.rs
its_routing/: Cargo.toml
its_routing/src/: aeh.rs  aeh_carrier.rs  aeh_channel.rs  availability_ledger.rs  cli.rs  client.rs  config.rs  courier.rs  cover_transport.rs  daemon.rs  main.rs  packet.rs  pool_mailbox.rs  ratchet.rs  rng.rs  routing_lib.rs  valid_forward_party.rs  witness_consensus.rs
its_routing/src/ridges/: analog.rs  fingerprint_erasure.rs  mod.rs  timelock.rs
its_routing/tests/: otm_verify_integration.rs  routing_wire_onion_e2e.rs  routing_wire_pool_e2e.rs  timelock_integration.rs
its_routing/tests/transport/: morphic_proof_simulation.rs  stealth_identity_simulation.rs  tunnel.rs
its_transport/: Cargo.toml
its_transport/src/: epoch_cell.rs  field_arith.rs  lib.rs  lorenz.rs  masking.rs  morphic_proof.rs  onion.rs  poly.rs  sss_fragment.rs  stealth_identity.rs  transport_otp_ratchet.rs  transport_ratchet.rs  tunnel.rs
its_transport/tests/: fragment_roundtrip.rs
man/: hydra-its.1  its-net.1  its-routing.1
mathematics/: AEH.lean  Adversary.lean  AuthorAttributionZero.lean  AvailabilityLedger.lean  AvailabilityResilience.lean  BroadcastForward.lean  BroadcastIPDerivation.lean  BroadcastIPSymmetry.lean  CIA_Doctrine.lean  CensorshipDisclosure.lean  CoercionModel.lean  ComparativeThreatDoctrine.lean  EndpointEitherOr.lean  EndpointSplit.lean  FewUserDoctrine.lean  FlowAttributionZero.lean  ForwardProof.lean  ForwardReceiveGate.lean  IPObservation.lean  IntegrityAxiom.lean  LinkParticipation.lean  MasterTheorem.lean  MasterTheoremV6.lean  MathSupremacyDoctrine.lean  MediumIndependence.lean  MetadataSymmetry.lean  ObservationAlphabet.lean  OfflineChannel.lean  OplusClosure.lean  ParticipationSymmetry.lean  ParticipationTheorem.lean  PlausibleDeniability.lean  PlausibleDeniabilityAbsolute.lean  PublicPoolMulticast.lean  RecipientAttributionZero.lean  Refinement.lean  RoleAwareDeniability.lean  SSSMultiIPCourier.lean  SybilDoctrine.lean  TimelessSecurity.lean  (+7 more)
mathematics/AEH/: CovertChannel.lean  EpochGate.lean  StegoIndistinguishability.lean
mathematics/Refinement/: ClientPoolRefinement.lean  EpochCellCorrectness.lean  ForwardReceiveGateRefinement.lean  SssWireRefinement.lean  ValidForwardRefinement.lean  WitnessConsensusRefinement.lean
mathematics/Transport/: Basic.lean  Cell.lean  ChaffIndistinguishability.lean  Composition.lean  Epoch.lean  Field.lean  FiniteMutualInfo.lean  L9Composition.lean  MixAnonymity.lean  RatchetDerivation.lean  TimelockComposition.lean  WireComposition.lean
scripts/: bootstrap.sh  doc_sweep_d1_d9.py  e2e_bob.toml  e2e_node2.toml  e2e_node3.toml  install_completions.sh  its-curl.sh  its-onboard.sh  its-operator-install.sh  pipe_its_aeh_censorship_e2e.sh  pipe_its_censorship_recovery_e2e.sh  pipe_its_cover_harvest_e2e.sh  pipe_its_e2e.sh  pipe_its_hidden_service_e2e.sh  pipe_its_http_pool_e2e.sh  pipe_its_km_pool_e2e.sh  pipe_its_km_pooldir_prod_hazard.sh  pipe_its_km_sneakernet_e2e.sh  pipe_its_pool_e2e.sh  pipe_its_proxy_e2e.sh  pipe_its_public_mirror_e2e.sh  pipe_its_routing_e2e.sh  pipe_its_sneakernet_e2e.sh  pipe_its_socks_pool_e2e.sh  pipe_its_stream.sh  pipe_its_validfwd_e2e.sh  pipe_onion_its_e2e.sh  pipe_timelock.sh  verify_cli_completions.sh  verify_ecosystem.sh  verify_math.sh
scripts/lib/: pipe_pool_common.sh
spec/: README.md  hardware_sidechannel.md  mathematics.md  systems_software.md
tools/: its_pool_proxy.py  its_wire_proxy.py
