[workspace]
resolver = "2"
members = [
    "its_transport",
    "its_routing",
]

[workspace.dependencies]
its_transport = { path = "its_transport", version = "0.1.0" }
its_hardware = { git = "file:///home/user/ITS-hardware" }
its_ledger = { git = "file:///home/user/ITS-ledger" }
its_self_enclosed_timelock = { git = "file:///home/user/ITS-self_enclosed_timelock" }
its_otm_public_attestation = { git = "file:///home/user/ITS-OTM_public_attestation" }
its_fingerprint_erasure = { git = "file:///home/user/ITS-fingerprint_erasure" }
