[package]
name = "core_logic"
version = "0.1.0"
edition = "2021"

[dependencies]
subtle = { version = "2.5.0", default-features = false }
zeroize = { version = "1.7.0", default-features = false, features = ["derive", "alloc"] }
sha2 = { version = "0.10.8", default-features = false }
hkdf = { version = "0.12.4", default-features = false }
pbkdf2 = { version = "0.12.2", default-features = false, features = ["hmac", "sha2"] }
rand_core = { version = "0.6.4", default-features = false }
hal_abstraction = { path = "../hal_abstraction" }
