[package]
name = "hydra_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
core_logic = { path = "../core_logic" }
hal_abstraction = { path = "../hal_abstraction" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
