[package]
name = "hydra_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
core_logic = { git = "ssh://git@github.com/0x1F464/ITS.git", branch = "master" }
its_hardware = { path = "/home/user/ITS-hardware" }
its_ledger = { path = "/home/user/ITS-ledger" }
zeroize = { version = "1.7.0", features = ["derive", "alloc"] }

[features]
default = []
m61 = ["core_logic/m61"]

