[package]
name = "its_net_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "its-net"
path = "src/main.rs"

[dependencies]
core_logic = { git = "ssh://git@github.com/0x1F464/ITS.git", branch = "master" }
its_hardware = { git = "ssh://git@github.com/0x1F464/ITS-hardware.git", branch = "master" }
its_ledger = { git = "ssh://git@github.com/0x1F464/ITS-ledger.git", branch = "master" }
subtle = { version = "2.5.0", default-features = false }
zeroize = { version = "1.7.0", features = ["derive", "alloc"] }

[features]
default = []
m61 = ["core_logic/m61", "its_hardware/m61", "its_ledger/m61"]
