[package]
name = "its_pool_proxy"
version = "1.1.0"
edition = "2021"
description = "ITS pool SOCKS5 proxy — Shannon wire egress via UES Monocell Pool"
license = "GPL-3.0-only"

[[bin]]
name = "its-pool-proxy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tempfile = "3"
