[package]
name = "its_transport"
version = "0.1.0"
edition = "2021"
description = "ITS transport core (onion, fragment, trapdoor) — migrated from core_logic"
license = "GPL-3.0-only"

[dependencies]
its_otm_public_attestation = { git = "ssh://git@github.com/0x1F980/ITS-OTM_public_attestation.git", branch = "main" }
sha2 = { version = "0.10.8", default-features = false }
hkdf = { version = "0.12.4", default-features = false }
pbkdf2 = { version = "0.12.2", default-features = false, features = ["hmac", "sha2"] }
rand_core = { version = "0.6.4", default-features = false }
subtle = { version = "2.5.0", default-features = false }
zeroize = { version = "1.7.0", default-features = false, features = ["derive", "alloc"] }

[features]
default = []
m61 = ["its_otm_public_attestation/m61"]
