[package]
name = "its_transport"
version = "1.1.0"
edition = "2021"
description = "ITS transport core (onion, fragment, trapdoor, tunnel)"
license = "GPL-3.0-only"

[dependencies]
its_otm_public_attestation = { git = "ssh://git@github.com/0x1F980/ITS-OTM_public_attestation.git", branch = "main" }
rand_core = { version = "0.6.4", default-features = false }
subtle = { version = "2.5.0", default-features = false }
zeroize = { version = "1.7.0", default-features = false, features = ["derive", "alloc"] }

[features]
default = []
dev-onion-mix = []
m61 = ["its_otm_public_attestation/m61"]
